Changes in v1.2

+ Introduced different beep/tone frequencies (BEEPSPKR version only) for mix warning 
  beeps (1, 2 and 3)
+ Issue 11 (invalidated): Added text "[MENU] to refresh" to STAT2 page
+ Fixed issue 8: faulty mix warning beeps

Comitted r377

+ CHANGELOG introduced
+ Fr-Sky support v1.0 merged into trunk
+ ER's better fonts introduced (with slashes removed from zeroes)
+ Issue 9: Bug in PPM_IN capture values fixed
+ Some minor tweaks in display format of times
+ Resurrected the old sub-version auto-counter in the form of a "build number"
