@@ -1,5 +1,8 @@
 Changes in v1.2
 
++ Issue 10: Moved PPM-in pulse processing to pulse capture ISR function to fix
+  buffer overflows and, more importantly, make servo motion considerably smoother
+  when under trainee control.
 + Introduced different beep/tone frequencies (BEEPSPKR version only) for mix warning 
   beeps (1, 2 and 3)
 + Issue 11 (invalidated): Added text "[MENU] to refresh" to STAT2 page
